# rustar-gs

./: .gitignore  Cargo.toml  PACKETIZER.md  README.md
.github/workflows/: ci.yml
antenna-controller/: Cargo.toml  README.md
antenna-controller/examples/: iss.rs  main.rs
antenna-controller/src/: lib.rs  mock.rs  serial.rs
api/: .env.example  Cargo.toml  README.md  config.toml
api/migrations/: 20240101000000_create_telemetry_table.sql  20250901041846_change_ts_to_bigint.sql
api/src/: config.rs  lib.rs  main.rs
api/src/database/: mod.rs
api/src/messaging/: broker.rs  mod.rs  receiver.rs
api/src/models/: commands.rs  mod.rs  requests.rs  responses.rs  telemetry.rs
api/src/repository/: mod.rs  telemetry.rs
api/src/routes/: api.rs  config.rs  control.rs  mod.rs  telemetry.rs
api/src/services/: message_service.rs  mod.rs  telemetry_service.rs
cli/: Cargo.toml
cli/src/: error.rs  main.rs
core/: Cargo.toml  Dockerfile  compose.yml
core/antenna-controller/: Cargo.toml
core/antenna-controller/src/: serial.rs
core/demod/examples/: afsk1200.rs
core/demod/src/: afsk1200.rs  gr_mock.rs  lib.rs
core/framing/src/: bitvecdeque.rs  frame.rs
core/ground-station/: Cargo.toml
core/ground-station/src/: api.rs  config.rs  main.rs
demod/: Cargo.toml
demod/examples/: gr_mock.rs
demod/src/: afsk1200.rs  example.rs  gr_mock.rs  lib.rs
framer/: Cargo.toml
framer/src/: control.rs  lib.rs
framing/: Cargo.toml
framing/src/: bitvecdeque.rs  deframe.rs  frame.rs  hdlc.rs  hdlc_deframer.rs  lib.rs  mock.rs  mock_deframer.rs
ground-station/: Cargo.toml  README.md  config.toml
ground-station/src/: api.rs  config.rs  finite_interval.rs  gs_async.rs  gs_sync.rs  job.rs  main.rs  observations.rs  scheduler.rs  time.rs
hdlc/: Cargo.toml
hdlc/src/: bitvecdeque.rs  deframer.rs  frame.rs  lib.rs  packetizer.rs
hdlc/src/packets/: mod.rs  telemetry.rs
hdlc/tests/: integration_packetizer.rs
jobs/: Cargo.toml
jobs/examples/: scheduler.rs  scheduler_select.rs
jobs/src/: lib.rs
modem/: .gitignore  Cargo.toml  README.md
modem/examples/: README.md  example.rs
modem/flowgraphs/: afsk_demod.py  afsk_demod_headless.py
modem/src/: afsk1200.rs  demodulator.rs  example_demodulator.rs  lib.rs  modulator.rs
mqtt-client/: Cargo.toml
mqtt-client/examples/: echo.rs  receiver.rs  sender.rs
mqtt-client/src/: receiver.rs  sender.rs
packetizer/: Cargo.toml
packetizer/src/: lib.rs  packetizer.rs
report/: main.tex
report/sections/: abstract.tex  caratula.tex  estado_del_arte.tex  experimentacion.tex  glosario.tex  impacto.tex  intro.tex  keywords.tex  metodologia.tex  palabras_clave.tex  plan.tex  problema.tex  referencias.tex  resumen.tex  solucion.tex  state_of_the_art.tex
sdr/: Cargo.toml  README.md
sdr/src/: lib.rs
telemetry/: Cargo.toml
telemetry-protocol/: Cargo.toml  telemetry.txt
telemetry-protocol/src/: frame.rs  lib.rs  main.rs  protocol.rs
telemetry/src/: lib.rs
tracking/: Cargo.toml
tracking/examples/: iss.rs
tracking/src/: lib.rs  main.rs
