[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
config = "0.14"
env_logger = "0.11.8"
serde_json = "1.0.141"
