[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
utoipa = "4.2.3"
utoipa-swagger-ui = { version = "6.0", features = ["actix-web"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
config = "0.14"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "chrono", "uuid", "postgres"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.10"
async-trait = "0.1"
serde_json = "1.0.141"
log = "0.4.27"
rumqttc = "0.24.0"
dotenvy = "0.15.7"
