[package]
name = "ground-station"
version = "0.1.0"
edition = "2024"

[features]
time_mock = []

[dependencies]
tracking = { path = "../tracking" }
antenna-controller = { path = "../antenna-controller" }
demod = { path = "../demod" }
framing = { path = "../framing" }
packetizer = { path = "../packetizer" }
chrono = "0.4.41"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
config = "0.14.1"
mqtt-client = { version = "0.1.0", path = "../mqtt-client" }
tokio-stream = "0.1.17"
