[package]
name = "jobs"
version = "0.1.0"
edition = "2024"

[dependencies]
pin-project = "1.1.10"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
chrono = "0.4.42"
tracking = { git = "https://github.com/AstarAeroespacial/rustar-tracking.git" }

[[bin]]
name = "scheduler-select"
path = "examples/scheduler_select.rs"
